# artefact-mcp-server

./: README.md  llms.txt  pyproject.toml  server.json
