[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "artefact-mcp"
version = "0.3.3"
description = "The AI-native interface to your Revenue Operating System — signal detection, constraint analysis, value engine health, GTM commit drafting, plus RFM, ICP scoring, and pipeline health"
readme = "README.md"
license = {text = "BSL-1.1"}
requires-python = ">=3.10"
authors = [
    { name = "Artefact Ventures", email = "alex@artefactventures.com" },
]
keywords = [
    "mcp",
    "mcp-server",
    "model-context-protocol",
    "revenue-intelligence",
    "hubspot",
    "rfm-analysis",
    "icp-scoring",
    "pipeline-health",
    "signal-detection",
    "gtm-version-control",
    "revenue-operating-system",
    "b2b",
    "crm",
    "ai-tools",
    "llm-tools",
    "claude",
    "sales-intelligence",
    "customer-scoring",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.0,<3.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.20",
]

[project.urls]
Homepage = "https://artefactventures.com/en/mcp?utm_campaign=always_on-community-demand-mcp-pypi-listing-mcp_server-na-pypi&utm_medium=marketplace&utm_source=pypi.org&utm_content=documentation-package-page-link-en&utm_term=developer-na"
Documentation = "https://github.com/artefactventures/artefact-mcp-server#readme"
Repository = "https://github.com/artefactventures/artefact-mcp-server"
Issues = "https://github.com/artefactventures/artefact-mcp-server/issues"
Changelog = "https://github.com/artefactventures/artefact-mcp-server/blob/main/CHANGELOG.md"

[project.scripts]
artefact-mcp = "artefact_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/artefact_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
